Add information inside index.html
In this commit, added information inside each of lightbox.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <nav id="character_nav">
             <ul class="characters">
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox1">
                         <div class="sprite" id="Sailor1"></div>
                         <h5>Sailor Moon</h5>
                     </a>
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox2">
                         <div class="sprite" id="Sailor2"></div>
                         <h5>Sailor Mercury</h5>
                     </a>
@@ -32,7 +32,7 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox3">
                     <div class="sprite" id="Sailor3"></div>
                     <h5>Sailor Mars</h5>
                 </a>
@@ -40,21 +40,21 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox4">
                         <div class="sprite" id="Sailor4"></div>
                         <h5>Sailor Jupiter</h5>
                     </a>
                 </li>
 
                 <li>
-                    <a href="#lightbox2">
+                    <a href="#lightbox5">
                         <div class="sprite" id="Sailor5"></div>
                         <h5>Sailor Venus</h5>
                     </a>
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox6">
                         <div class="sprite" id="Sailor6"></div>
                         <h5>Chibiusa</h5>
                     </a>
@@ -69,6 +69,79 @@
     <footer class="sticky_footer">
         <h3>All Images &copy; Salior Moon</h3>
     </footer>
+
+    <section class="lightbox" id="lightbox1">
+        <a href="" class="lightbox_close">x</a>
+        <article>
+            <h3 class="lb_heading">
+                Sailor Moon
+            </h3>
+            <p class="lb_text">Sailor Moon, created by Naoko Takeuchi, is a beloved Japanese manga and anime series that has captured the hearts of fans around the world. The story follows Usagi Tsukino, a seemingly ordinary teenage girl who discovers her destiny as Sailor Moon, the guardian of love and justice. Alongside her Sailor Guardian friends, each representing a celestial body, Usagi embarks on a mission to protect the Earth from the forces of evil. The series is celebrated not only for its magical girl elements but also for its empowering themes of friendship, love, and self-discovery. Sailor Moon has become a cultural phenomenon, influencing subsequent generations of manga and anime creators and leaving a lasting impact on the global pop culture landscape.</p>
+            <p class="lb_text">One of the distinctive features of Sailor Moon is its blend of action, romance, and character development. Usagi's journey from a clumsy and carefree girl to a courageous and powerful warrior resonates with audiences of all ages. The series addresses universal themes of identity, sacrifice, and the strength that comes from embracing one's true self. With its memorable characters, engaging storyline, and timeless messages, Sailor Moon continues to enchant fans worldwide, proving that the power of love and friendship can overcome even the darkest forces.</p>
+        </article>
+
+    </section>
+
+    <section class="lightbox" id="lightbox2">
+        <a href="" class="lightbox_close">x</a>
+        <article>
+            <h3 class="lb_heading">
+                Sailor Mercury
+            </h3>
+            <p class="lb_text">Sailor Mercury, also known as Ami Mizuno, is a central character in the iconic manga and anime series, Sailor Moon. As the guardian of wisdom and intellect, Ami serves as the brains of the Sailor Guardians. Known for her exceptional intelligence and strategic thinking, she is a studious and quiet young girl who excels academically. Ami's transformation into Sailor Mercury is triggered by her strong sense of justice and her dedication to protecting the world from evil forces. Armed with her sophisticated computer, the Mercury Computer, she can analyze situations, calculate probabilities, and devise effective plans to thwart the enemies of love and justice.</p>
+            <p class="lb_text">Ami Mizuno's character adds depth to the Sailor Moon narrative by showcasing the importance of intelligence and resourcefulness in the face of adversity. Beyond her analytical prowess, Ami is a caring and loyal friend who values the bonds of friendship formed among the Sailor Guardians. Her presence in the series highlights the diverse strengths that each Sailor Guardian brings to the team, emphasizing the significance of unity and collaboration in the ongoing battle against evil. Sailor Mercury has become an inspiring figure for fans, particularly those who appreciate the combination of intelligence, compassion, and bravery in a superhero character.</p>
+        </article>
+
+    </section>
+
+    <section class="lightbox" id="lightbox3">
+        <a href="" class="lightbox_close">x</a>
+        <article>
+            <h3 class="lb_heading">
+                Sailor Mars
+            </h3>
+            <p class="lb_text">Sailor Mars, also known as Rei Hino, is a captivating character in the enchanting world of Sailor Moon. As the guardian of fire and passion, Rei brings a fierce and mystical element to the Sailor Guardians. With her spiritual abilities and connection to the sacred flame, she serves as the spiritual heart of the group. Rei is often portrayed as a miko, a shrine maiden, reflecting her deep ties to the spiritual realm. Her fiery temperament and determination make her a formidable ally in the fight against the forces of darkness. Sailor Mars wields her powers with elegance and precision, using her unique abilities to both protect her friends and uphold justice.</p>
+            <p class="lb_text">Rei's character adds a layer of mysticism to the Sailor Moon series, blending the magical girl genre with elements of Shinto spirituality. Beyond her supernatural abilities, she is known for her strong intuition and premonitions, offering valuable insights to the Sailor Guardians. Rei's journey explores themes of destiny and identity, as she grapples with her dual role as a spiritual guide and a powerful warrior. With her captivating personality and commitment to the greater good, Sailor Mars has become a fan-favorite character, contributing to the diverse and dynamic tapestry of the Sailor Moon universe.</p>
+        </article>
+
+    </section>
+    
+    <section class="lightbox" id="lightbox4">
+        <a href="" class="lightbox_close">x</a>
+        <article>
+            <h3 class="lb_heading">
+                Sailor Jupiter
+            </h3>
+            <p class="lb_text">Sailor Jupiter, or Makoto Kino, is a dynamic and empowering character within the Sailor Moon series. As the guardian of thunder and courage, Makoto brings both strength and femininity to the team. With her tall stature and athletic prowess, she stands out as a formidable warrior, excelling in hand-to-hand combat and harnessing the power of lightning. Despite her tough exterior, Makoto is also portrayed as a nurturing and caring friend, known for her culinary skills and love of gardening. Sailor Jupiter's dual nature, combining physical strength with emotional depth, adds a unique dimension to the diverse group of Sailor Guardians.</p>
+            <p class="lb_text">Makoto's backstory, which includes her love for traditional feminine pursuits and her experiences with heartbreak, resonates with many fans, showcasing a character who defies stereotypes and embraces her multifaceted identity. Sailor Jupiter's journey unfolds as she grapples with the challenges of balancing her powerful warrior role with her personal desires and vulnerabilities. Her unwavering courage and determination in the face of adversity make her an inspiring figure for audiences, reinforcing the series' themes of resilience, friendship, and the strength derived from embracing one's authentic self.</p>
+        </article>
+
+    </section>
+
+    <section class="lightbox" id="lightbox5">
+        <a href="" class="lightbox_close">x</a>
+        <article>
+            <h3 class="lb_heading">
+                Sailor Venus
+            </h3>
+            <p class="lb_text">Sailor Venus, also known as Minako Aino, is a radiant and charismatic character in the Sailor Moon series, embodying the essence of love and beauty. Often recognized as the leader of the Inner Sailor Guardians, Minako initially operated solo as Sailor V before joining forces with Sailor Moon and the others. Her persona as Sailor Venus is characterized by her golden hair, crescent moon on her forehead, and a strong affinity for love-themed attacks. Beyond her warrior duties, Minako is portrayed as a cheerful and outgoing individual who dreams of becoming an idol. Her contrasting qualities of determination in battle and a love for glamour contribute to the depth of her character, making her a beloved and multifaceted member of the Sailor Guardians.</p>
+            <p class="lb_text">Minako's backstory as Sailor V, her experiences as a pop idol, and her role as the leader of the Inner Guardians bring a unique dynamic to the series. Her journey delves into themes of responsibility, sacrifice, and the pursuit of personal aspirations while fulfilling a greater purpose. Sailor Venus serves as a beacon of inspiration for fans, showcasing the transformative power of love and the ability to navigate the complexities of life with a positive and resilient spirit.</p>
+        </article>
+
+    </section>
+
+    <section class="lightbox" id="lightbox6">
+        <a href="" class="lightbox_close">x</a>
+        <article>
+            <h3 class="lb_heading">
+                Chibi Moon
+            </h3>
+            <p class="lb_text">Chibi Moon, or Chibiusa Tsukino, is a delightful and endearing character in the Sailor Moon universe, adding a touch of youthful charm to the team of Sailor Guardians. The daughter of Sailor Moon and Tuxedo Mask, Chibiusa travels from the future to seek help from her parents and the other Sailor Guardians. Despite her small stature, Chibi Moon possesses a strong will and determination. She transforms into Sailor Chibi Moon, the guardian of love and small lady, wielding the magical artifact known as the Pink Moon Stick. Chibiusa's presence introduces a new dynamic to the group, highlighting themes of family, legacy, and the passing of the torch to the next generation of protectors.</p>
+            <p class="lb_text">Chibi Moon's character development is marked by her growth from a initially shy and insecure child into a courageous and capable Sailor Guardian. Her relationships with the other characters, particularly her deep bond with Sailor Pluto, add emotional depth to the narrative. Chibi Moon's inclusion in the series not only expands the overarching storyline but also emphasizes the importance of intergenerational connections and the enduring strength that can be drawn from the love and support of family.</p>
+        </article>
+
+    </section>
+
 
 </body>
 </html>
